# valid-builder

./: pyproject.toml  readme.md
docs/: Implementation-Plan-valid-builder-v1.md  RequestValidator_sample.kt  SDD-valid-builder_v1.md  SRS-valid-builder-v1.md  openapi-spec - sample.yml
src/: __init__.py  cli.py  config.py  csv_writer.py  dependency_resolver.py  description.py  logging_utils.py  models.py  orchestrator.py  rule_id_manager.py
src/analyzers/: __init__.py  kotlin_analyzer.py  openapi_analyzer.py
tests/: test_cli_args.py  test_cli_error_cases.py  test_cli_kotlin_end_to_end.py  test_cli_openapi_end_to_end.py  test_cli_warning_cases.py  test_config.py  test_csv_writer.py  test_dependencies.py  test_description_kotlin.py  test_description_openapi.py  test_dispatcher.py  test_kotlin_patterns.py  test_kotlin_sample_golden.py  test_logging_summary.py  test_logging_utils.py  test_openapi_rules.py  test_openapi_sample_golden.py  test_orchestrator_errors.py  test_orchestrator_success.py  test_packaging.py  test_request_validator_rule002.py  test_rule_ids.py  test_rule_model.py
